# ot-harjoitustyo

./: README.md
budgetapp/: .gitignore  pyproject.toml  tasks.py
budgetapp/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md  vaatimusmaarittely.md.save
budgetapp/src/: config.py  index.py  initialize_database.py
budgetapp/src/entities/: budget.py  transaction.py  user.py
budgetapp/src/repositories/: transaction_repository.py  user_repository.py
budgetapp/src/services/: budget.py  budget_service.py
budgetapp/src/tests/: transaction_test.py  user_test.py
budgetapp/src/tests/repositories/: transaction_test.py  user_test.py
budgetapp/src/tests/service/: budget_service_test.py
budgetapp/src/ui/: front_page.py  login_page.py  signup_page.py  ui.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly1.md  monopoly2.md  sequenceDiagram1.md  sequenceDiagram2.md
